UI: fix tribes being too wide in some resolutions

--- a/core/src/css/component/battlegrounds/hero-selection/bgs-hero-overview.component.scss
+++ b/core/src/css/component/battlegrounds/hero-selection/bgs-hero-overview.component.scss
@@ -91,7 +91,7 @@
 @media (min-width: 1450px) {
 	::ng-deep .hero-overview .tribes.tribes.tribes.tribes .composition .tribe {
 		font-size: 11px;
-		width: calc(min(33%, 9vh));
+		width: calc(min(33%, 8vh));
 	}
 }
 
